# PyPlumIO

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  MANIFEST.in  README.md  callbacks.html  connecting.html  disagnostics.py  frames.html  genindex.html  index.html  mixers_thermostats.html  objects.inv  protocol.html  pyproject.toml  reading.html  requirements.txt  requirements_docs.txt  requirements_test.txt  schedules.html  search.html  searchindex.js  setup.cfg  setup.py  statistics.html  tox.ini  writing.html
.doctrees/: callbacks.doctree  connecting.doctree  environment.pickle  frames.doctree  index.doctree  mixers_thermostats.doctree  protocol.doctree  reading.doctree  schedules.doctree  statistics.doctree  writing.doctree
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  deploy.yml  documentation.yml  test.yml
.qlty/: qlty.toml
_sources/: callbacks.rst.txt  connecting.rst.txt  frames.rst.txt  index.rst.txt  mixers_thermostats.rst.txt  protocol.rst.txt  reading.rst.txt  schedules.rst.txt  statistics.rst.txt  writing.rst.txt
_static/: documentation_options.js
docs/source/: callbacks.rst  conf.py  connecting.rst  frames.rst  index.rst  mixers_thermostats.rst  protocol.rst  reading.rst  schedules.rst  statistics.rst  usage.rst  writing.rst
pyplumio/: __init__.py  __main__.py  client.py  connection.py  const.py  constants.py  data_types.py  devices.py  econet.py  exceptions.py  factory.py  filters.py  frame.py  mixers.py  protocol.py  requests.py  responses.py  storage.py  stream.py  structures.py  typing.py  util.py  utils.py  version.py
pyplumio/devices/: __init__.py  ecomax.py  ecoster.py  mixer.py  thermostat.py
pyplumio/frames/: __init__.py  messages.py  requests.py  responses.py
pyplumio/helpers/: __init__.py  async_cache.py  base_device.py  classname.py  data_types.py  event_manager.py  factory.py  filters.py  frame_versions.py  network.py  network_info.py  parameter.py  product_info.py  schedule.py  singleton.py  task_manager.py  timeout.py  typing.py  uid.py  version_info.py
pyplumio/parameters/: __init__.py  ecomax.py  mixer.py  thermostat.py
pyplumio/parameters/custom/: __init__.py  ecomax_860d3_hb.py
pyplumio/structures/: __init__.py  alarm_codes.py  alarms.py  alerts.py  boiler_load.py  boiler_parameters.py  boiler_power.py  current_alerts.py  data_schema.py  device_parameters.py  ecomax_parameters.py  fan_power.py  frame_versions.py  fuel_consumption.py  fuel_level.py  lambda_.py  lambda_sensor.py  load.py  mixer_parameter.py  mixer_parameters.py  mixer_sensors.py  mixers.py  modules.py  network_info.py  output_flags.py  outputs.py  pending_alerts.py  power.py  product_info.py  program_version.py  regulator_data.py  regulator_data_schema.py  regulator_parameter.py  schedules.py  sensor_data.py  statuses.py  temperatures.py  thermostat_parameters.py  thermostat_sensors.py  thermostats.py  (+3 more)
src/pyplumio/: __init__.py  constants.py  devices.py  econet.py  exceptions.py  factory.py  frame.py  storage.py  stream.py  structures.py  util.py
src/pyplumio/frames/: requests.py  responses.py
tests/: __init__.py  conftest.py  ruff.toml  test__init__.py  test_connection.py  test_data_types.py  test_devices.py  test_filters.py  test_frame.py  test_init.py  test_main.py  test_mixers.py  test_protocol.py  test_requests.py  test_responses.py  test_storage.py  test_stream.py  test_util.py  test_utils.py
tests/devices/: __init__.py  test_ecomax.py  test_ecoster.py  test_init.py  test_mixer.py  test_thermostat.py
tests/frames/: test_init.py  test_messages.py  test_requests.py  test_responses.py
tests/helpers/: __init__.py  test_async_cache.py  test_data_types.py  test_event_manager.py  test_factory.py  test_filters.py  test_parameter.py  test_schedule.py  test_task_manager.py  test_timeout.py  test_uid.py
tests/parameters/: __init__.py  test_ecomax.py  test_init.py  test_mixers.py  test_thermostats.py
tests/parameters/custom/: __init__.py  test_ecomax_860d3_hb.py  test_init.py
tests/structures/: __init__.py  test_alarm_codes.py  test_alarms.py  test_alerts.py  test_boiler_load.py  test_boiler_parameters.py  test_boiler_power.py  test_current_alerts.py  test_device_parameters.py  test_ecomax_parameters.py  test_fan_power.py  test_frame_versions.py  test_fuel_consumption.py  test_fuel_level.py  test_lambda_.py  test_lambda_sensor.py  test_mixer_parameter.py  test_mixer_parameters.py  test_mixers.py  test_modules.py  test_output_flags.py  test_outputs.py  test_product_info.py  test_schedules.py  test_statuses.py  test_temperatures.py  test_thermostats.py  test_uid.py  test_var_string.py
tests/testdata/messages/: regulator_data.json  sensor_data.json
tests/testdata/parameters/: ecomax_860d3_hb.json
tests/testdata/requests/: alerts.json  ecomax_control.json  ecomax_parameters.json  mixer_parameters.json  set_ecomax_parameter.json  set_mixer_parameter.json  set_schedule.json  set_thermostat_parameter.json  thermostat_parameters.json
tests/testdata/responses/: alerts.json  data_schema.json  device_available.json  ecomax_parameters.json  mixer_parameters.json  password.json  program_version.json  regulator_data_schema.json  schedules.json  thermostat_parameters.json  uid.json
tests/testdata/unknown/: unknown_ecomax_parameter.json  unknown_mixer_parameter.json
