[metadata]
name = PyPlumIO
version = 0.0.6
author = Denis Paavilainen
author_email = denpa@denpa.pro
description = PyPlumIO is a native ecoNET library for Plum ecoMAX controllers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denpamusic/PyPlumIO
project_urls =
    Bug Tracker = https://github.com/denpamusic/PyPlumIO/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True
