[metadata]
name = PyPlumIO
author = Denis Paavilainen
author_email = denpa@denpa.pro
description = PyPlumIO is a native ecoNET library for Plum ecoMAX controllers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denpamusic/PyPlumIO
project_urls =
    Bug Tracker = https://github.com/denpamusic/PyPlumIO/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Home Automation

[flake8]
exclude = .git,.tox,.mypy_cache,build
max-complexity = 25
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True

[codespell]
skip = .git,.tox,.mypy_cache,build
